[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Fonts/Calistoga/Calistoga-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Training/EvaluationStatsBoard.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Training/ExampleAppleClusters/AppleCluster_Successful.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Training/ExampleAppleClusters/AppleCluster_Overthinned.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Training/ExampleAppleClusters/AppleCluster_Underthinned.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Training/ExampleAppleClusters/AppleCluster_Missed.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Meshes/Fruitlets/DamagedFruitlet.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Meshes/Fruitlets/HealthyFruitlet.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=25]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=26]
viewport_path = NodePath("Viewport")

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=10]
viewport_path = NodePath("SuccessfulClustersSection/Viewport2")

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("OverthinnedClustersSection/Viewport2")

[sub_resource type="ViewportTexture" id=14]
viewport_path = NodePath("UnderthinnedClustersSection/Viewport2")

[sub_resource type="ViewportTexture" id=16]
viewport_path = NodePath("MissedClustersSection/Viewport2")

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/Fonts/Calistoga/Calistoga-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 72
font_data = SubResource( 7 )

[sub_resource type="ViewportTexture" id=17]
viewport_path = NodePath("DamagedFruitletsSection/Viewport")

[sub_resource type="ViewportTexture" id=18]
viewport_path = NodePath("DamagedFruitletsSection/Viewport2")

[sub_resource type="ViewportTexture" id=19]
viewport_path = NodePath("LargeFruitletsSection/Viewport")

[sub_resource type="ViewportTexture" id=20]
viewport_path = NodePath("LargeFruitletsSection/Viewport2")

[sub_resource type="ViewportTexture" id=21]
viewport_path = NodePath("SmallFruitletsSection/Viewport")

[sub_resource type="ViewportTexture" id=22]
viewport_path = NodePath("SmallFruitletsSection/Viewport2")

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="CubeMesh" id=27]
material = SubResource( 4 )
size = Vector3( 2.5, 1.25, 0.2 )

[node name="EvaluationStatsBoard" type="Spatial"]
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 700, 700 )
transparent_bg = true
render_target_v_flip = true

[node name="EvaluationStatsBoardTitle" type="Label" parent="Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 25 )
text = "Your Results"

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( -8.74228e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-09, 0.107635, -0.145522, -0.275895 )
modulate = Color( 0.917647, 0.858824, 0, 1 )
texture = SubResource( 26 )

[node name="SuccessfulClustersSection" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.127, 0.195, 0.8 )

[node name="Viewport2" type="Viewport" parent="SuccessfulClustersSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="Value" type="Label" parent="SuccessfulClustersSection/Viewport2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "x --"

[node name="Sprite3D2" type="Sprite3D" parent="SuccessfulClustersSection"]
transform = Transform( -7.45058e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -7.45058e-09, 0.00158265, -0.229819, -0.167665 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 10 )

[node name="AppleCluster_Successful" parent="SuccessfulClustersSection" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0.227 )

[node name="OverthinnedClustersSection" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.127, 0.167, 0.4 )

[node name="Viewport2" type="Viewport" parent="OverthinnedClustersSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="Value" type="Label" parent="OverthinnedClustersSection/Viewport2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "x --"

[node name="Sprite3D2" type="Sprite3D" parent="OverthinnedClustersSection"]
transform = Transform( -7.45058e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -7.45058e-09, 5.96046e-08, -0.204919, -0.380499 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 12 )

[node name="AppleCluster_Overthinned" parent="OverthinnedClustersSection" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="UnderthinnedClustersSection" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.127, 0.179, -0.247292 )

[node name="Viewport2" type="Viewport" parent="UnderthinnedClustersSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="Value" type="Label" parent="UnderthinnedClustersSection/Viewport2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "x --"

[node name="Sprite3D2" type="Sprite3D" parent="UnderthinnedClustersSection"]
transform = Transform( -7.45058e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -7.45058e-09, -1.19209e-07, -0.216633, -0.395666 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 14 )

[node name="AppleCluster_Underthinned" parent="UnderthinnedClustersSection" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="MissedClustersSection" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.127, 0.194, -0.8 )

[node name="Viewport2" type="Viewport" parent="MissedClustersSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="Value" type="Label" parent="MissedClustersSection/Viewport2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "x --"

[node name="Sprite3D2" type="Sprite3D" parent="MissedClustersSection"]
transform = Transform( -7.45058e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -7.45058e-09, 0, -0.231087, -0.397177 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 16 )

[node name="AppleCluster_Missed" parent="MissedClustersSection" instance=ExtResource( 7 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="DamagedFruitletsSection" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.127, -0.242, 0.79 )

[node name="Viewport" type="Viewport" parent="DamagedFruitletsSection"]
size = Vector2( 400, 400 )
transparent_bg = true
render_target_v_flip = true

[node name="Title" type="Label" parent="DamagedFruitletsSection/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_constants/line_spacing = -5
custom_fonts/font = SubResource( 8 )
text = "Diseased"

[node name="Sprite3D" type="Sprite3D" parent="DamagedFruitletsSection"]
transform = Transform( 7.54979e-09, 0, 0.1, 0, 0.1, 0, -0.1, 0, 7.54979e-09, 5.21541e-08, -0.30516, -0.0313972 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 17 )

[node name="Viewport2" type="Viewport" parent="DamagedFruitletsSection"]
size = Vector2( 400, 400 )
transparent_bg = true
render_target_v_flip = true

[node name="Value" type="Label" parent="DamagedFruitletsSection/Viewport2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "x --"

[node name="Sprite3D2" type="Sprite3D" parent="DamagedFruitletsSection"]
transform = Transform( -8.74228e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-09, -2.98023e-08, -0.293037, -0.524038 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 18 )

[node name="DamagedFruitlet" parent="DamagedFruitletsSection" instance=ExtResource( 8 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="LargeFruitletsSection" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.127, -0.460407, -0.0841019 )

[node name="Viewport" type="Viewport" parent="LargeFruitletsSection"]
size = Vector2( 400, 400 )
transparent_bg = true
render_target_v_flip = true

[node name="Title" type="Label" parent="LargeFruitletsSection/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_constants/line_spacing = -5
custom_fonts/font = SubResource( 8 )
text = "Large"

[node name="Sprite3D" type="Sprite3D" parent="LargeFruitletsSection"]
transform = Transform( 7.54979e-09, 0, 0.1, 0, 0.1, 0, -0.1, 0, 7.54979e-09, 5.96046e-08, -0.0914538, 0.111075 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 19 )

[node name="Viewport2" type="Viewport" parent="LargeFruitletsSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="Value" type="Label" parent="LargeFruitletsSection/Viewport2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "x --"

[node name="Sprite3D2" type="Sprite3D" parent="LargeFruitletsSection"]
transform = Transform( 3.89414e-08, 0, 0.2, 0, 0.2, 0, -0.2, 0, 3.89414e-08, -2.83122e-07, 0.0262043, -0.181252 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 20 )

[node name="HealthyFruitlet" parent="LargeFruitletsSection" instance=ExtResource( 9 )]
transform = Transform( 2, 0, 5.96046e-08, 0, 2, 0, -5.96046e-08, 0, 2, -2.98023e-07, 0.216047, 0.223469 )

[node name="SmallFruitletsSection" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.104895, -0.580202, -0.584409 )

[node name="Viewport" type="Viewport" parent="SmallFruitletsSection"]
size = Vector2( 400, 400 )
transparent_bg = true
render_target_v_flip = true

[node name="Title" type="Label" parent="SmallFruitletsSection/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_constants/line_spacing = -5
custom_fonts/font = SubResource( 8 )
text = "Small"

[node name="Sprite3D" type="Sprite3D" parent="SmallFruitletsSection"]
transform = Transform( 2.04891e-08, 0, 0.0999999, 0, 0.1, 0, -0.0999999, 0, 2.04891e-08, -2.23517e-08, 0.0196158, 0.0318303 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 21 )

[node name="Viewport2" type="Viewport" parent="SmallFruitletsSection"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="Value" type="Label" parent="SmallFruitletsSection/Viewport2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "x --"

[node name="Sprite3D2" type="Sprite3D" parent="SmallFruitletsSection"]
transform = Transform( 1.49012e-08, 0, 0.2, 0, 0.2, 0, -0.2, 0, 1.49012e-08, -1.41561e-07, 0.132758, -0.255734 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 22 )

[node name="HealthyFruitlet" parent="SmallFruitletsSection" instance=ExtResource( 9 )]
transform = Transform( 1.25, 0, -1.19209e-07, 0, 1.25, 0, 1.19209e-07, 0, 1.25, 1.49012e-08, 0.32549, 0.132534 )

[node name="Board" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 27 )
material/0 = null
